# tap-toggl

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_toggl/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
